19 February 2008
+ Rewritten to work with new url rewriting scheme
+ .htaccess writing functions removed
+ allow/deny moved into module
+ Admin tab removed
+ Access now a core module

+ Updated: templates/forms/allow_deny.tpl, template/forms/shortcut_list.tpl

Version 0.2.3 -- 25 July 2007
-----------------------------------------------------------------------------------
25 July 2007
+ Fixed bug #1690698: Cannot create a new .htaccess file if original
  is deleted. Thanks singletrack
+ Fixed bug #1690544: If the .htaccess file is not writable or
  missing, give the user a warning message.

8 June 2007
+ Locale file updated.


Version 0.2.2 -- 17 May 2007
------------------------------------------------------------------------------------
+ The default rewrite conditional was missing a file check.
+ Previous update had updated files going to incorrect directory.
+ Template was removing curly brackets from review mode. Fixed.


Version 0.2.1
------------------------------------------------------------------------------------
4 April 2007
+ Changed to new language format.

Version 0.2.0
------------------------------------------------------------------------------------

19 March 2007
+ Update panel shows the current .htaccess file as well as
  the one the admin is about to save.
+ Changed the admin panel to turn off different components.
+ Rewrite engine enabled by default.
+ Shortcuts now separated by dashes and not underlines
+ Keywords in shortcuts parsed better.
+ Admins can now edit shortcut keywords from the admin panel.
+ Deny/Allow tab changed to Allow/Deny since it is set that way every where else.
+ Allow/Deny can now be disabled in the Admin panel.
+ Added a way to restore the default .htaccess file.
+ Removed follow sym links from htaccess

5 March 2007
+ Changed control panel icon

Version 0.1.2
------------------------------------------------------------------------------------

22 February 2007
+ Put file directory option back into boost.php file.
